methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:3: error: not found: type red
  FaireMotif(c: red)
                ^FlowerPot:3: error: not found: value c
  FaireMotif(c: red)
             ^